update service endpoint
