# src/main/resources/apispec/openapi3.yaml
@@ -11,12 +11,19 @@ info:
 servers:
   - url: https://virtserver.swaggerhub.com/iamsoham/springboottutorials/1.0.0
     description: SwaggerHub API Auto Mocking
+tags:
+  - name: Service API
+    description: Service level APIs
+  - name: Provider API
+    description: Provider Level APIs
 paths:
   /services:
     get:
       summary: lists all services
       description: list all services
       operationId: getAllServices
+      tags:
+        - Service API
       responses:
         "200":
           description: all services
@@ -32,11 +39,36 @@ paths:
           description: There is no endpoint found.
         "500":
           description: Internal Server Error.
+    post:
+      summary: adds an service
+      description: Adds a service to the system
+      operationId: addService
+      requestBody:
+        description: Service to add
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Service'
+      tags:
+        - Service API
+      responses:
+        "201":
+          description: Item got created successfully.
+        "400":
+          description: Request is not correct.
+        "404":
+          description: There is no endpoint found.
+        "409":
+          description: Item exists
+        "500":
+          description: Internal Server Error.
   /providers:
     get:
       summary: lists all providers
       description: list all providers
       operationId: getAllProviders
+      tags:
+        - Provider API
       responses:
         "200":
           description: all providers
@@ -52,7 +84,30 @@ paths:
           description: There is no endpoint found.
         "500":
           description: Internal Server Error.
-  /service/{id}:
+    post:
+      summary: adds a Provider
+      description: Adds a Provider to the system
+      operationId: addProvider
+      requestBody:
+        description: Provider item to add
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Provider'
+      tags:
+        - Provider API
+      responses:
+        "201":
+          description: Item got created.
+        "400":
+          description: Request is not correct.
+        "404":
+          description: There is no endpoint found.
+        "409":
+          description: Item already exists.
+        "500":
+          description: Internal Server Error.
+  /services/{id}:
     get:
       summary: gets a specific service by id
       description: get by service id
@@ -65,6 +120,8 @@ paths:
           explode: false
           schema:
             type: integer
+      tags:
+        - Service API
       responses:
         "200":
           description: Successfull response with Service info
@@ -78,7 +135,7 @@ paths:
           description: There is no endpoint found.
         "500":
           description: Internal Server Error.
-  /provider/{id}:
+  /providers/{id}:
     get:
       summary: gets a specific provider by id
       description: get by provider id
@@ -91,6 +148,8 @@ paths:
           explode: false
           schema:
             type: integer
+      tags:
+        - Provider API
       responses:
         "200":
           description: Successfull response with Provider info
@@ -117,6 +176,8 @@ paths:
           explode: false
           schema:
             type: integer
+      tags:
+        - Provider API
       responses:
         "200":
           description: Successfull response with Provider and Services info
@@ -130,72 +191,8 @@ paths:
           description: There is no endpoint found.
         "500":
           description: Internal Server Error.
-  /provider:
-    post:
-      summary: adds a Provider
-      description: Adds a Provider to the system
-      operationId: addProvider
-      requestBody:
-        description: Provider item to add
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ProviderRequestDTO'
-      responses:
-        "200":
-          description: Successfull response with Provider info
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Provider'
-        "400":
-          description: Request is not correct.
-        "404":
-          description: There is no endpoint found.
-        "409":
-          description: '#/components/responses/409ItemExists'
-        "500":
-          description: Internal Server Error.
-  /service:
-    post:
-      summary: adds an service
-      description: Adds a service to the system
-      operationId: addService
-      requestBody:
-        description: Service to add
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ServiceRequestDTO'
-      responses:
-        "200":
-          description: Successfull response with Service info
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Service'
-        "400":
-          description: Request is not correct.
-        "404":
-          description: There is no endpoint found.
-        "409":
-          description: '#/components/responses/409ItemExists'
-        "500":
-          description: Internal Server Error.
 components:
   schemas:
-    ProviderRequestDTO:
-      required:
-        - description
-        - name
-      type: object
-      properties:
-        name:
-          type: string
-          example: Loco Poco
-        description:
-          type: string
-          example: Everything for your house
     Provider:
       required:
         - description
@@ -212,18 +209,6 @@ components:
         description:
           type: string
           example: Everything for your house
-    ServiceRequestDTO:
-      required:
-        - description
-        - name
-      type: object
-      properties:
-        name:
-          type: string
-          example: 3D Projector
-        description:
-          type: string
-          example: Projector for your house
     Service:
       required:
         - description
@@ -264,14 +249,3 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Service'
-  responses:
-    "201ItemCreated":
-      description: Item got created successfully.
-    "400BadRequest":
-      description: Request is not correct.
-    "404NotFound":
-      description: There is no endpoint found.
-    "409ItemExists":
-      description: an existing item already exists.
-    "500InternalServerError":
-      description: Internal Server Error.
